<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".LoginActivity">
<!--Imagen de fondo-->
    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:paddingTop="5dp"
        android:scaleType="fitStart"
        android:src="@drawable/bglg" />
    <!--Layout del contenido principal-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--Contenedor Login-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:padding="5dp"
            android:paddingTop="10dp">


            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/txtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical|center_horizontal"
                android:lines="2"
                android:text="@string/login_desc"
                android:textColor="@color/colorText" />

            <EditText
                android:id="@+id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/upshape"
                android:elevation="4dp"
                android:ems="10"
                android:hint="@string/hint_correo"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp" />

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/upshape"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:elevation="4dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                />

            <TextView
                android:id="@+id/txtOlvide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:gravity="end"
                android:onClick="onClickRecupera"
                android:text="@string/olv_contra"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btnshape"
                android:elevation="4dp"
                android:onClick="onClickIniciar"
                android:text="@string/btn_login"
                android:textColor="@color/colorBtnT" />

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="onClicktReg"
                android:text="@string/register"
                android:textColor="@color/colorText"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgShape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@android:string/untitled"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/triangulo" />
        <!--Contenedor google-face-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:background="@color/colorText"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnGoogle"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btngoogle"
                android:drawableStart="@drawable/google"
                android:padding="10dp"
                android:text="@string/google"
                android:textColor="@color/colorText"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnFb"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/btnfb"
                android:drawableStart="@drawable/fb"
                android:padding="10dp"
                android:text="@string/facebook"
                android:textColor="@color/colorText"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>